--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fn-html",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "useful html functions",
   "main": "index.js",
   "scripts": {
-    "test": "node test/index.test.js"
+    "test": "node test/index.test.js && node test/array.test.js"
   },
   "repository": {
     "type": "git",
